5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1834_2602.log
== TEST (2019-06-25 22:59:52) 
-- CODE:
from math import *
from numpy.linalg import *
a=array(input('digite:   ')

x=array([[2,1,4], [1,2,0],[2,3,2]])
	
-- ERROR:
File "XXXX", line 5
    x=array([[2,1,4], [1,2,0],[2,3,2]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:00:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(input('digite:   ')

x=array([[2,1,4], [1,2,0],[2,3,2]])
	
-- ERROR:
File "XXXX", line 5
    x=array([[2,1,4], [1,2,0],[2,3,2]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:44:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(input('digite:   ')
x=array([[2,1,4], [1,2,0],[2,3,2]])
	
-- ERROR:
File "XXXX", line 4
    x=array([[2,1,4], [1,2,0],[2,3,2]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:45:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(input('digite:   ')
b=array([[2,1,4], [1,2,0],[2,3,2]])
	
-- ERROR:
File "XXXX", line 4
    b=array([[2,1,4], [1,2,0],[2,3,2]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:45:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(input('digite:   ')
b=array([[2,1,4],[1,2,0],[2,3,2]])
	
-- ERROR:
File "XXXX", line 4
    b=array([[2,1,4],[1,2,0],[2,3,2]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:45:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(input('digite:   ')
b=array([[2,1,4],[1,2,0],[2,3,2]])
	
-- ERROR:
File "XXXX", line 4
    b=array([[2,1,4],[1,2,0],[2,3,2]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:45:38) 
-- CODE:
from numpy import *
a=array(input('digite:   ')
b=array([[2,1,4],[1,2,0],[2,3,2]])
	
-- ERROR:
File "XXXX", line 3
    b=array([[2,1,4],[1,2,0],[2,3,2]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:45:52) 
-- CODE:
from numpy import *
a=array(input('digite:   ')

	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:46:09) 
-- CODE:
from numpy import *
a=array(input('digite:   ')

	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:46:26) 
-- CODE:
from numpy import *
a=array(input('digite:   '))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:43:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite:")))
b=array([[2,1,2],[1,2,3],[4,0,2]])
x=dot(b,a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:43:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite:")))
b=array([[2,1,2],[1,2,3],[4,0,2]])
x=dot(b,a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:44:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite:")))
b=array([[2,1,2],[1,2,3],[4,0,2]])
x=dot(inv(b),a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:45:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite:")))
b=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(b,a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:46:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite:")))
b=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(b),a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:59:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:00:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:08:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:09:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == max(x):
    print("estafilococo")
elif preco[1] == max(preco):
    print("almonena")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:09:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == max(x):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonena")
else:
    print("coli")
-- EXECUTION TIME:
1.26004
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonena:  1864.5
coli:  -439.0
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonena:  16783.4
coli:  12183.6
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonena:  -9717.3
coli:  -6745.3
estafilococo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:10:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == max(x):
    print("estafilococo")
elif x[1] == max(x):
    print("salmonena")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:10:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == max(x):
    print("estafilococo")
elif x[1] == max(x):
    print("salmonena")
else:
    print("coli")
-- EXECUTION TIME:
1.18774
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonena:  1864.5
coli:  -439.0
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonena:  16783.4
coli:  12183.6
salmonena
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonena:  -9717.3
coli:  -6745.3
estafilococo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:11:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == mi(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonena")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:11:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == min(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonena")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:11:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == min(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonena")
else:
    print("coli")
-- EXECUTION TIME:
1.22789
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonena:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonena:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonena:  -9717.3
coli:  -6745.3
salmonena
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:12:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == min(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonena")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:13:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == min(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonena")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:13:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == min(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonena")
else:
    print("coli")
-- EXECUTION TIME:
1.22743
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonena:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonena:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonena:  -9717.3
coli:  -6745.3
salmonena
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:13:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] = min(x):
    print("estafilococo")
elif x[1] = min(x):
    print("salmonena")
else:
    print("coli")
-- ERROR:
File "XXXX", line 11
    if x[0] = min(x):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:13:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonena: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == min(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonena")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:14:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
b=array(eval(input("digite:")))
a=array([[2,1,4],[1,2,0],[2,3,2]])
x=dot(inv(a),b)

print("estafilococo: " , round(x[0],1))
print("salmonela: " , round(x[1],1))
print("coli: " , round(x[2],1))

if x[0] == min(x):
    print("estafilococo")
elif x[1] == min(x):
    print("salmonela")
else:
    print("coli")
-- EXECUTION TIME:
1.12435
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
